examples/Passing/Variables/correct_inc_bracketx3.c
int main() {
    int a = 10;
    ++((((((((((a))))))))));
    (((((((((a)))))))))++;
    return (((((((a)))))))++;
}
