examples/Failing/Variables/incorrect_inc_bracketx1.c
int main() {
    int a = 100;
    ++(a));
    ++((a);
    (a))++;
    ((a)++;
}
